fix overscroll background color and use device preferences for dark mode, and remember in local storage

--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,12 @@ body {
   height: 100%;
   min-height: 100vh;
   min-width: 100vw;
+  background-color: var(--font-bg-light);
+}
+
+html.dark,
+body.dark {
+  background-color: var(--font-bg-dark);
 }
 
 body {
